...
                        contentScale = scale,
                    )
                bitmap != null ->
                    Image(
                        bitmap!!,
                        description,
                        Modifier.fillMaxSize().testTag("loaded-media"),
                        contentScale = scale,
                    )
                loading ->
                    CircularProgressIndicator(Modifier.size(32.dp).testTag("public-media-loading"))
                else ->
                    Column(
...
